Minor refactoring: 1. Comments (i.e. function and variables documentation). 2. Reorganization of the project (e.g. specific folder for the results, specific folder for the .properties file, etc.)

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
 # Don't track content of these directories
 generateData/
 kmeansTest1/
+results/
+properties/
 
 # Specific file types #
 ###################
 *.out
-*.properties
-*.txt
+*.sh
